--- a/Android/BikeBuds/app/src/main/res/values/strings.xml
+++ b/Android/BikeBuds/app/src/main/res/values/strings.xml
@@ -2,14 +2,18 @@
 <resources>
 
     <string name="app_name">BikeBuds</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_biking">BikingActivity</string>
-    <string name="hello_world">Hello world!</string>
+
+    <string name="drawer_item_setup">Setup</string>
+    <string name="drawer_item_ride">Ride</string>
+    <string name="drawer_item_light_pack">Light Pack</string>
+    <string name="drawer_item_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
